# dotty

./: .copier-answers.yml  Cargo.toml  Earthfile  README.md
src/: config.rs  main.rs
