[package]
name = "dotty"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
shellexpand = "3.0"
fs_extra = "1.3.0"
tera = {version="1.20", default-features=false}
